outputs/main/hsevo-qd_bpp_online_2025-07-24_18-20-23/problem_iter9_response1.txt_stdout.txt
Traceback (most recent call last):
  File "/home/dokhanhnam1199/QD/problems/bpp_online/eval.py", line 9, in <module>
    from gpt import priority_v2 as priority
  File "/home/dokhanhnam1199/QD/problems/bpp_online/gpt.py", line 33
    priorities = np.where(priorities > -1.0, priorities - np.min(priorities[p Priorities > -1.0]), priorities)
                                                                            ^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
10
1
102.1865710312585
74.32874709091739
139
